# Flamingo

./: Cargo.toml  Dioxus.toml  README.md  package-lock.json
Doc/Developments/: tailwindcss.md
assets/: tailwind.css
src/: lib.rs  main.rs  view.rs  web_socket_conm.rs
src/view/: app_chart.rs  app_footer.rs  app_header.rs  app_main.rs  app_oscilloscope.rs  device_info.rs  info_panel.rs
