[package]
name = "flamingo"
version = "0.1.0"
authors = ["Zhongjin Lu <luzhongjin365@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
charming = { git="https://github.com/yuankunzhang/charming", features = ["wasm"] }
console_log = { version = "1.0.0", features = ["wasm-bindgen"] }
dioxus = { version = "0.6.0", features = [] }
dioxus-logger = "0.6.2"
futures-util = { version = "0.3.31", features = ["sink"] }
gloo-net = "0.6.0"
wasm-bindgen-futures = "0.4.50"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
